// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGlobalOverrides should render with global override 1`] = `
<div>
  Baz
</div>
`;

exports[`useGlobalOverrides should render with global override shorthand 1`] = `
<div>
  Baz
</div>
`;

exports[`useGlobalOverrides should render with local overrides instead of global overrides 1`] = `
<div>
  Local
</div>
`;

exports[`useGlobalOverrides should render with local props merged with global overrides component 1`] = `
<div
  className="test"
>
  Baz
</div>
`;

exports[`useGlobalOverrides should render without overrides 1`] = `
<div>
  Bar
</div>
`;

exports[`useOverrides should render with automatically nested overrides 1`] = `
<div>
  <div>
    Baz
  </div>
</div>
`;

exports[`useOverrides should render with explicit component overrides 1`] = `
<div>
  Baz
</div>
`;

exports[`useOverrides should render with manually nested overrides 1`] = `
<div>
  <div>
    Baz
  </div>
</div>
`;

exports[`useOverrides should render with props overrides 1`] = `
<div
  className="Bar"
>
  Bar
</div>
`;

exports[`useOverrides should render with shorthand component overrides 1`] = `
<div>
  Baz
</div>
`;

exports[`useOverrides should render with style overrides 1`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  Bar
</div>
`;

exports[`useOverrides should render without overrides 1`] = `
<div>
  Bar
</div>
`;
